--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 <body>
     <header>
         <h1>Dress Up</h1>
+        <nav>
+            <a href="sobre.html">Sobre Nós</a>
+        </nav>
     </header>
     
     <section class="home">
         <img id="slideshow" src="imagem1.jpg" alt="Promoção">
-    </section>
-
-    <section class="sobre-nos">
-        <h2>Sobre Nós</h2>
-        <p>Aqui você pode falar sobre a loja...</p>
     </section>
 
     <section class="produtos">
