--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Dress Up</h1>
         <nav>
-            <a href="sobre.html">Sobre Nós</a>
+            <a href="index2.html">Sobre Nós</a>
         </nav>
     </header>
     
